프론트엔드기초수업 중 2

--- a/web/htmlStudy/ex/10/ps-1.html
+++ b/web/htmlStudy/ex/10/ps-1.html
@@ -31,6 +31,14 @@
     text-decoration: none;  /* 밑줄 없음 */
 
   }
+
+  .navi a:link{
+    color: red;
+  }
+
+  .navi a:visited{
+    color: aqua;
+  }
   .navi a:hover,  .navi a:focus {
     background-color:#222;  /* 배경색 */
     color:#fff;  /* 글자색 */
