instagram 클론 진행중2

--- a/web/instagram/auth.html
+++ b/web/instagram/auth.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,50 @@
     <title>instagram</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/auth.css">
-
+    <script src="https://kit.fontawesome.com/c857b9086a.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <section class="container">
         <main class="m-container">
             <article class="a-container">
                 <div class="l-content">
-                    <img src="/instagram/images/auth_main.PNG" class="l-content-img">
+                    <img src="images/auth_main.png" class="l-content-img">
                 </div>
                 <div class="r-content">
+                    <div class="item-box">
+                        <h1 class="b-logo"><img src="images/instagram_logo.PNG"></h1>
+                        <div class="items-group">
+                            <div class="items-group-form">
+                                <div class="input-items">
+                                    <label for="username">전화번호, 사용자 이름 또는 이메일</label>
+                                    <input type="text" id="username">
+                                </div>
+                                <div class="input-items">
+                                    <label for="password">비밀번호</label>
+                                    <input type="password" id="password">
+                                </div>
+                                <div class="input-items">
+                                    <button type="submit">로그인</button>
+                                </div>
+                                <div class="input-items">
+                                    <div class="hr-sect"><span>또는</span></div>
+                                </div>
+                                <div class="input-items">
+                                    <a href="#" class="facebook-login">
+                                        <span><i class="fa-brands fa-facebook-square"></i>Facebook으로 로그인</span></a>
 
+                                </div>
+                            </div>
+                            <a href="#">비밀번호를 잊으셨나요?</a>
+                        </div>
+                    </div>
+                    <div>
+
+                    </div>
+                    <div>
+
+                    </div>
                 </div>
             </article>
         </main>
@@ -26,4 +60,5 @@
         </footer>
     </section>
 </body>
+
 </html>
