--- a/web/instagram/auth.html
+++ b/web/instagram/auth.html
@@ -8,7 +8,7 @@
     <title>instagram</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/auth.css">
-    <script src="https://kit.fontawesome.com/c857b9086a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ede2458143.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -39,17 +39,19 @@
                                 </div>
                                 <div class="input-items">
                                     <a href="#" class="facebook-login">
-                                        <span><i class="fa-brands fa-facebook-square"></i>Facebook으로 로그인</span></a>
-
+                                        <span><i class="fa-brands fa-facebook-square"></i>Facebook으로 로그인</span>
+                                    </a>
                                 </div>
                             </div>
                             <a href="#">비밀번호를 잊으셨나요?</a>
                         </div>
                     </div>
-                    <div>
-
+                    <div class="item-box">
+                        <div class="signup-items">
+                            <p>계정이 없으신가요? <a href="#">가입하기</a></p>
+                        </div>
                     </div>
-                    <div>
+                    <div class="r-content-footer">
 
                     </div>
                 </div>
