--- a/web/instagram/auth.html
+++ b/web/instagram/auth.html
@@ -32,7 +32,7 @@
                                     <input type="password" id="password">
                                 </div>
                                 <div class="input-items">
-                                    <button type="submit">로그인</button>
+                                    <button type="button">로그인</button>
                                 </div>
                                 <div class="input-items">
                                     <div class="hr-sect"><span>또는</span></div>
@@ -61,6 +61,7 @@
 
         </footer>
     </section>
+    <script src="js/auth.js"></script>
 </body>
 
 </html>
