--- a/web/htmlStudy/ex/17/attribute.html
+++ b/web/htmlStudy/ex/17/attribute.html
@@ -26,9 +26,21 @@
     </div>
 
     <script>
+        const box = document.querySelector(".box");
         const imgBtn = document.querySelector(".img-btn");
-        const img = document.querySelector("img")
-        imgBtn.onclick = () => {
+        const img = document.querySelector("img");
+
+        box.style.backgroundColor == 'blue';
+
+        img.onclick = () => {
+            if(box.style.backgroundColor == 'blue'){
+                box.style.backgroundColor == red;
+            }else {
+                box.style.backgroundColor == 'blue';
+            }
+        }
+
+        imgBtn.onclick = (event) => {
             console.log(img.getAttribute('src'));
             if(img.getAttribute('src') == 'images/cup-1.png'){
                 img.setAttribute('src', 'images/cup-2.png');
