--- a/web/instagram/account.html
+++ b/web/instagram/account.html
@@ -8,7 +8,7 @@
     <title>instagram</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/account.css">
     <script src="https://kit.fontawesome.com/c857b9086a.js" crossorigin="anonymous"></script>
 </head>
 
