프론트엔드 기초 6일차 복습

--- a/web/instagram/auth.html
+++ b/web/instagram/auth.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="r-content-footer">
-
+                        <img src="./images/download.PNG">
                     </div>
                 </div>
             </article>
