--- a/web/re_web/re_htmlStudy/re_instagram/re_auth.html
+++ b/web/re_web/re_htmlStudy/re_instagram/re_auth.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/re_style.css">
     <link rel="stylesheet" href="css/re_auth.css">
 </head>
+
 <body>
     <section class="container">
         <main class="m-container">
@@ -16,15 +18,42 @@
                     <img src="./imges/auth_main.PNG" class="l-content-imges">
                 </div>
                 <div class="r-content">
-                    <div class="r-header">
-
+                    <div class="item-box">
+                        <h1 class="b-logo"><img src="./imges/instagram_logo.PNG"></h1>
+                        <div class="items-group">
+                            <div class="items-group-form">
+                                <div class="input-items">
+                                    <label for="username">전화번호, 사용자 이름 또는 이메일</label>
+                                    <input type="text" id="username">
+                                </div>
+                                <div class="input-items">
+                                    <label for="password">비밀번호</label>
+                                    <input type="password" id="password">
+                                </div>
+                                <div class="input-items">
+                                    <button type="button">로그인</button>
+                                </div>
+                                <div class="input-items">
+                                    <div class="hr-sect"><span>또는</span></div>
+                                </div>
+                                <div class="input-items">
+                                    <a href="#" class="facebook-login">
+                                        <span><i class="fa-brands fa-facebook-square"></i>Facebook으로 로그인</span>
+                                    </a>
+                                </div>
+                            </div>
+                            <a href="#">비밀번호를 잊으셨나요?</a>
+                        </div>
                     </div>
-                    <div class="r-main">
-
+                    <div class="item-box">
+                        <div class="signup-items">
+                            <p> 계정이 없으신가요? <a href="#">가입하기</a></p>
+                        </div>
                     </div>
-                    <div class="r-footer">
-                        
+                    <div class="r-content-footer">
+                        <img src="./imges/download.PNG">
                     </div>
+                </div>
                 </div>
             </article>
         </main>
@@ -33,4 +62,5 @@
         </footer>
     </section>
 </body>
+
 </html>
