프론트엔드 기초 8일차 복습

--- a/web/htmlStudy/ex/17/domCss.html
+++ b/web/htmlStudy/ex/17/domCss.html
@@ -16,7 +16,7 @@
 			height:100px;			
 			border:1px solid #222;
 			margin:30px auto;
-			transition: 1s;
+			transition: 1s;  /* 변하는 속도 */
 		}
 	</style>
 </head>
