--- a/web/re_web/re_htmlStudy/re_instagram/re_auth.html
+++ b/web/re_web/re_htmlStudy/re_instagram/re_auth.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="r-content-footer">
-                        <img src="./imges/download.PNG">
+                        <img src="./imges/download2.PNG ">
                     </div>
                 </div>
                 </div>
@@ -61,6 +61,7 @@
 
         </footer>
     </section>
+    <script src="js/re_auth.js"></script>
 </body>
 
 </html>
