프론트엔드 기초 9일차 복습

--- a/web/htmlStudy/ex/17/attribute.html
+++ b/web/htmlStudy/ex/17/attribute.html
@@ -34,7 +34,7 @@
 
         img.onclick = () => {
             if(box.style.backgroundColor == 'blue'){
-                box.style.backgroundColor == red;
+                box.style.backgroundColor == 'red';
             }else {
                 box.style.backgroundColor == 'blue';
             }
