--- a/web/re_web/re_htmlStudy/re_instagram/re_auth.html
+++ b/web/re_web/re_htmlStudy/re_instagram/re_auth.html
@@ -15,11 +15,11 @@
         <main class="m-container">
             <article class="a-container">
                 <div class="l-content">
-                    <img src="./imges/auth_main.PNG" class="l-content-imges">
+                    <img src="./images/auth_main.PNG" class="l-content-imges">
                 </div>
                 <div class="r-content">
                     <div class="item-box">
-                        <h1 class="b-logo"><img src="./imges/instagram_logo.PNG"></h1>
+                        <h1 class="b-logo"><img src="./images/instagram_logo.PNG"></h1>
                         <div class="items-group">
                             <div class="items-group-form">
                                 <div class="input-items">
@@ -47,11 +47,11 @@
                     </div>
                     <div class="item-box">
                         <div class="signup-items">
-                            <p> 계정이 없으신가요? <a href="#">가입하기</a></p>
+                            <p> 계정이 없으신가요? <a href="re_signup.html">가입하기</a></p>
                         </div>
                     </div>
                     <div class="r-content-footer">
-                        <img src="./imges/download2.PNG ">
+                        <img src="./images/download2.PNG ">
                     </div>
                 </div>
                 </div>
